main.ipynb modified: added \mathbb{} instead of \R and \Z

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In the first computer assignment we have been asked to design a genetic algorithm so that it converges on a solution to the \"Curve Fitting Problem\". Curve Fitting's goal is finding a polynomial representation for a set of given points, in a way that the polynomial representation corresponds each point.\n",
     "\n",
-    "For the sake of simplicity, in this project, the degree of the result is given as a parameter to the program, as well as the interval each coefficient must be in. Also, it is considered that points in the given sample must be in $\\Z^2$ and each coefficient in the polynomial representation must be in $\\Z$."
+    "For the sake of simplicity, in this project, the degree of the result is given as a parameter to the program, as well as the interval each coefficient must be in. Also, it is considered that points in the given sample must be in $\\mathbb{Z}^2$ and each coefficient in the polynomial representation must be in $\\mathbb{Z}$."
    ]
   },
   {
@@ -57,7 +57,7 @@
     "- Each **cycle** includes a sequence of actions performed on a population to create a new population.\n",
     "- **Population** is a sequence of chromosomes corresponding. The size of population is referred to by $m$.\n",
     "- **Evaluation function** is the score of each chromosome. It must be increasing as chromosomes get closer to the goal.  \n",
-    "$evaluation\\_function: chromosomes \\rightarrow \\R$\n",
+    "$evaluation\\_function: chromosomes \\rightarrow \\mathbb{R}$\n",
     "- **Selection** is an action taken to choose members of the population that will survive to the next cycle.  \n",
     "$select: chromosomes^m \\rightarrow chromosomes^m$\n",
     "- **Crossover function** is a function that creates two new chromosomes out of two parent chromosomes.  \n",
