added evaluation function description to main.ipynb

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -57,7 +57,7 @@
     "- Each **cycle** includes a sequence of actions performed on a population to create a new population.\n",
     "- **Population** is a sequence of chromosomes corresponding. The size of population is referred to by $m$.\n",
     "- **Evaluation function** is the score of each chromosome. It must be increasing as chromosomes get closer to the goal.  \n",
-    "$evaluation\\_function: chromosomes \\rightarrow \\mathbb{R}$\n",
+    "$evaluation\\_function: chromosomes \\rightarrow \\mathbb{R}$  \n",
     "- **Selection** is an action taken to choose members of the population that will survive to the next cycle.  \n",
     "$select: chromosomes^m \\rightarrow chromosomes^m$\n",
     "- **Crossover function** is a function that creates two new chromosomes out of two parent chromosomes.  \n",
@@ -69,7 +69,8 @@
     "- **Mutation probability** is the probability by which a gene is mutated.  \n",
     "$Pr_{mutation}$\n",
     "\n",
-    "In our design it was determined that a number of good chromosomes would not get mutated at all. This number is referred to by $N_{not\\_mutated}$.\n",
+    "It should be mentioned that in this algorithm, evaluation function for chromosome $(g_0, g_1, \\dots, g_d)$ is defined as the summation of $(-| y - \\sum_{k=0}^d g_kx^k |)$ for each $(x, y)$ in the sample.  \n",
+    "Also, in our design it was determined that a number of good chromosomes would not get mutated at all. This number is referred to by $N_{not\\_mutated}$.\n",
     "\n",
     "To implement all these factors eligibly, they are reserved in a `Config` class. In this class two more methods are implemented that are not mentioned:\n",
     "- `get_probability` which returns a sequence of probabilities, each corresponding to the probability a chromosome could get selected by, with respect to the order of chromosomes in the population,\n",
